fix: adjust gap before 'map' section in tablet mode

--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -42,7 +42,7 @@
   .map {
     clip-path: polygon(0 0, 50% 68px, 100% 0, 100% 100%, 0 100%);
     height: 375px;
-    margin-top: -17px;
+    margin-top: 28px;
   }
 
   .map__image {
